<resources>
    <string name="app_name">Jusan Test Project</string>
    <string name="enter_pin">Введите код</string>
    <string name="btn_1">1</string>
    <string name="btn_2">2</string>
    <string name="btn_3">3</string>
    <string name="btn_4">4</string>
    <string name="btn_5">5</string>
    <string name="btn_6">6</string>
    <string name="btn_7">7</string>
    <string name="btn_8">8</string>
    <string name="btn_9">9</string>
    <string name="btn_delete"><![CDATA[>]]></string>
    <string name="btn_0">0</string>
    <string name="btn_OK">OK</string>
    <string name="correct_pin_toast">Entered PIN is correct!</string>
</resources>