<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:columnCount="3"
    android:rowCount="4"
    android:useDefaultMargins="true"
    >

    <TextView
        android:id="@+id/btn1"
        style="@style/KeyBoardButton"
        android:background="@drawable/btn_keyboard"
        android:text="@string/btn_1"/>

    <TextView
        android:id="@+id/btn2"
        style="@style/KeyBoardButton"
        android:background="@drawable/btn_keyboard"
        android:text="@string/btn_2"/>

    <TextView
        android:id="@+id/btn3"
        style="@style/KeyBoardButton"
        android:background="@drawable/btn_keyboard"
        android:text="@string/btn_3"/>

    <TextView
        android:id="@+id/btn4"
        style="@style/KeyBoardButton"
        android:background="@drawable/btn_keyboard"
        android:text="@string/btn_4"/>

    <TextView
        android:id="@+id/btn5"
        style="@style/KeyBoardButton"
        android:background="@drawable/btn_keyboard"
        android:text="@string/btn_5"/>

    <TextView
        android:id="@+id/btn6"
        style="@style/KeyBoardButton"
        android:background="@drawable/btn_keyboard"
        android:text="@string/btn_6"/>

    <TextView
        android:id="@+id/btn7"
        style="@style/KeyBoardButton"
        android:background="@drawable/btn_keyboard"
        android:text="@string/btn_7"/>

    <TextView
        android:id="@+id/btn8"
        style="@style/KeyBoardButton"
        android:background="@drawable/btn_keyboard"
        android:text="@string/btn_8"/>

    <TextView
        android:id="@+id/btn9"
        style="@style/KeyBoardButton"
        android:background="@drawable/btn_keyboard"
        android:text="@string/btn_9"/>

    <TextView
        android:id="@+id/btnDelete"
        style="@style/KeyBoardButton"
        android:background="@drawable/btn_keyboard"
        android:text="@string/btn_delete"/>

    <TextView
        android:id="@+id/btn0"
        style="@style/KeyBoardButton"
        android:background="@drawable/btn_keyboard"
        android:text="@string/btn_0"/>

    <TextView
        android:id="@+id/btnOK"
        style="@style/KeyBoardButton"
        android:background="@drawable/btn_keyboard"
        android:text="@string/btn_OK"/>







</GridLayout>